# ctrsdk

./: .gitmodules  CMakeLists.txt
sources/crt0/MPCore/: crt0.cpp
